<resources>
    <string name="fb_appid" translatable="false">fb1296087437136481</string>

    <string name="app_name" translatable="false">CountOnMe</string>
    <string name="login_title" translatable="false">Login</string>

    <string name="invitation_title">Join sharing activity</string>

    <string name="sharing_activities_title">Sharing activities</string>
    <string name="sharing_activity_add_new_title">New Sharing Activity</string>
    <string name="sharing_activity_edit_title">Edit Sharing Activity</string>
    <string name="sharing_activity_details_title">Details</string>

    <string name="lbl_users">Users</string>

    <string name="expenses_title">Expenses</string>
    <string name="expense_details_title">Expense details</string>
    <string name="expense_add_new_title">New expense</string>
    <string name="expense_edit_title">Edit expense</string>

    <string name="lbl_select_picture">Select a picture</string>

    <string name="balance_title">Balance</string>
    <string name="balance_owes">Owes</string>

    <string name="empty_sharing_list_lbl">You do not have sharing activities yet</string>
    <string name="total_balance_lbl">Total balance: &#160;</string>

    <string name="lbl_description">Description</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_amount">Amount</string>
    <string name="lbl_amount_param">Amount (%1$s)</string>
    <string name="lbl_currency">Currency</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_money_transfer">Money tranfer</string>
    <string name="lbl_share_evenly">Share evenly</string>
    <string name="lbl_yes">YES</string>
    <string name="lbl_no" translatable="false">NO</string>
    <string name="lbl_ok" translatable="false">OK</string>

    <string name="lbl_created_by">Created by: %1$s</string>

    <string name="lbl_saving_error">Saving error. Please try again</string>
    <string name="lbl_expense_saved">New expense saved successfully</string>

    <!-- General strings -->
    <string name="lbl_loading_data">Loading data</string>
    <string name="lbl_please_wait">Please wait...</string>

    <!-- Login and new user registration -->
    <string name="lbl_login">User login</string>
    <string name="lbl_new_user">User registration</string>
    <string name="lbl_login_btn">Login</string>

    <string name="lbl_user_name">User name:</string>
    <string name="lbl_email">Email address:</string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_user_name_hint">Enter your user name</string>
    <string name="lbl_email_hint">Enter your email</string>
    <string name="lbl_password_hint">Enter your password</string>

    <string name="lbl_registration_instr_1">Not have an account?&#032;</string>
    <string name="lbl_registration_instr_2">Register here</string>

    <string name="lbl_login_instr_1">Already Registered?&#032;</string>
    <string name="lbl_login_instr_2">Sign in here</string>


    <string name="lbl_register_user">Register user</string>

    <string name="lbl_registering_user">Registering user</string>
    <string name="lbl_logging_user">Logging in</string>

    <!-- Expenses -->
    <string name="lbl_saving_expense">Saving expense</string>
    <string name="notificationTitle" translatable="false">CountOnMe</string>
    <string name="notificationDetail">New expense saved</string>

    <!-- Sharing Activity -->
    <string name="lbl_saving_sharing_activity">Saving sharing activity</string>
    <string name="lbl_saved_sharing_activity">New sharing activity saved</string>


    <!-- Currencies -->
    <string name="currency_euro_lbl">Euro</string>
    <string name="currency_dollar_lbl">U.S. Dollar</string>
    <string name="currency_pesetas_lbl">Pesos</string>

    <string name="example">example</string>

    <string-array name="currencies_array">
        <item>@string/currency_dollar_lbl</item>
        <item>@string/currency_euro_lbl</item>
        <item>@string/currency_pesetas_lbl</item>
    </string-array>

    <string name="err_name">Enter Name</string>
    <string name="err_description">Enter Description</string>
    <string name="err_amount">Enter Amount</string>
    <string name="err_amount_range">Amount should be grater than zero</string>

    <string name="succ_save">Succesfuly Saved</string>

    <string name="temp_not_implemeted_lbl">Not implemented yet</string>
    <string name="message_to_share">You have been invited to an expenses sharing activity:</string>
    <string name="lbl_error_sharing_link">Error sharing link</string>
    <string name="select_app">Select an application</string>

    <string name="my_status_lbl">My Status</string>
    <string name="my_spend_lbl">Spend: &#160;</string>
    <string name="my_credit_lbl">Credits: &#160; </string>
    <string name="my_debt_lbl">Debts: &#160;</string>

    <string name="group_status_lbl">Group Status</string>

    <string name="lbl_paid_by">Paid by</string>
    <string name="lbl_amount_sharing">Amount sharing:</string>

    <!-- Navigation drawer entries -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="lbl_nav_drawer_settings">Settings</string>
    <string name="lbl_nav_drawer_logout">Logout</string>

    <!-- Errors -->
    <string name="lbl_required_field">Required</string>
    <string name="lbl_passwd_too_weak">TOO WEAK!!!</string>
    <string name="lbl_login_error">Could not log in. Please try again</string>
    <string name="lbl_registration_error">Could not registered. Please try again</string>

    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://play.google.com\",\n  }\n}]</string>

    <string name="lbl_invalid_value">Invalid value</string>
    <string name="lbl_invalid_amount_sharing">Invalid amount sharing</string>

    <string name="lbl_camera_error">Could not open camera application</string>

    <!-- Image management -->
    <string name="lbl_add_picture_from">Add picture from</string>
    <string name="lbl_picture_from_gallery">Gallery and other sources</string>
    <string name="lbl_picture_from_camera">Camera</string>

    <!-- formatting and parametric string -->
    <string name="fmt_date">yyyy/MM/dd</string>

    <!-- notification -->
    <string name="lbl_new_expense_notification_title">A new expense has been added</string>
    <string name="lbl_new_expense_nofirication_boby">%1$s created by %2$s</string>

    <!-- Error strings -->
    <string name="lbl_error_could_not_save">Could not save</string>
    <string name="lbl_error_please_try_again">An error occurred. Please try again</string>

    <string name="lbl_error_wrong_expense_sharing">Please check the expense amount sharing</string>
    <string name="thanks">Thanks for using CountOnMe</string>
    <string name="usernologged">User did not do log in</string>
    <string name="noexistactivity">The activity shared does not exist any more. Thanks for use CountOnMe</string>
    <string name="lbl_deleteExpense">An expense will be delete</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_confirmationdeleteExpense">Are you sure that you want to delete the expense?</string>
    <string name="lbl_any_selected">0 item selected</string>
    <string name="lbl_item_selected">item selected</string>
    <string name="lbl_deleteSharingActivity">Leaving the Sharing Activity</string>
    <string name="lbl_confirmationdeleteSharingActivity">Are you sure that you want to leave the sharing activity?</string>
    <string name="lbl_error_can_not_leave_title">Sorry, You can not leave the Sharing Activity.</string>
    <string name="lbl_error_can_not_leave_reason">Reason: Since this Sharing Activity contains some expenses , you can not leave.</string>

</resources>
