<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding"
        android:scrollbars="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/label_padding_10"
            android:text="@string/lbl_login"
            android:textSize="@dimen/title_text_size" />
        <!-- email address field -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_email" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ed_margin_10"
            android:hint="@string/lbl_email_hint"
            android:inputType="textEmailAddress" />
        <!-- password field -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_password" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ed_margin_10"
            android:hint="@string/lbl_password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/lbl_login_btn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/layout_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_registration_instr_1" />

            <TextView
                android:id="@+id/register_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_registration_instr_2"
                android:textColor="@color/linkTextColor" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
