<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- The toolbar -->
    <include layout="@layout/toolbar"/>
    <!-- The login layout content -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding"
            android:scrollbars="vertical">

            <!-- user name field -->
            <it.polito.mad.countonme.customviews.RequiredInputTextView
                xmlns:CountOnMe="http://schemas.android.com/apk/res/it.polito.mad.countonme"
                android:layout_width="wrap_content"
                android:id="@+id/rtv_user_name"
                android:layout_height="wrap_content"
                android:text="@string/lbl_user_name"
                CountOnMe:error_text="@string/lbl_required_field"
                CountOnMe:error_color="@color/errorColor"/>

            <EditText
                android:id="@+id/ed_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ed_margin_10"
                android:hint="@string/lbl_user_name_hint" />
            <!-- email address field -->
            <it.polito.mad.countonme.customviews.RequiredInputTextView
                xmlns:CountOnMe="http://schemas.android.com/apk/res/it.polito.mad.countonme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rtv_email"
                android:text="@string/lbl_email"
                CountOnMe:error_text="@string/lbl_required_field"
                CountOnMe:error_color="@color/errorColor"/>

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ed_margin_10"
                android:hint="@string/lbl_email_hint"
                android:inputType="textEmailAddress" />
            <!-- password field -->
            <it.polito.mad.countonme.customviews.RequiredInputTextView
                xmlns:CountOnMe="http://schemas.android.com/apk/res/it.polito.mad.countonme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rtv_password"
                android:text="@string/lbl_password"
                CountOnMe:error_text="@string/lbl_required_field"
                CountOnMe:error_color="@color/errorColor"/>

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ed_margin_10"
                android:hint="@string/lbl_password_hint"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_user_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/lbl_register_user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="@dimen/layout_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_login_instr_1" />

                <TextView
                    android:id="@+id/sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_login_instr_2"
                    android:textColor="@color/linkTextColor" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
