<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CountOnMe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/layout_padding">
        
        <ImageView
            android:id="@+id/img_expense_photo"
            android:layout_width="@dimen/new_image_size"
            android:layout_height="@dimen/new_image_size"
            android:clickable="true"
            android:src="@drawable/ic_add_a_photo"
            android:background="?attr/selectableItemBackground"
            android:layout_alignParentTop="true"
            android:padding="@dimen/image_padding_10"
            android:layout_alignParentLeft="true"/>

        <!-- The expense name -->
        <it.polito.mad.countonme.customviews.RequiredInputTextView
            android:id="@+id/rtv_expense_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_name"
            android:textSize="@dimen/interface_text_size_small"
            android:textColor="@android:color/black"
            CountOnMe:error_text="@string/lbl_required_field"
            CountOnMe:error_color="@color/errorColor"
            android:layout_toRightOf="@id/img_expense_photo"
            android:paddingLeft="@dimen/lbl_padding_10"
            android:layout_above="@+id/ed_expense_name" />

        <EditText
            android:id="@id/ed_expense_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:paddingLeft="@dimen/ed_padding_10"
            android:layout_toRightOf="@id/img_expense_photo"
            android:layout_alignBottom="@id/img_expense_photo"/>

        <!-- The expense description -->
        <it.polito.mad.countonme.customviews.RequiredInputTextView
            android:id="@+id/rtv_expense_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_description"
            android:textSize="@dimen/interface_text_size_small"
            android:textColor="@android:color/black"
            CountOnMe:error_text="@string/lbl_required_field"
            CountOnMe:error_color="@color/errorColor"
            android:layout_below="@+id/img_expense_photo"
            android:layout_marginTop="@dimen/lbl_margin_10"/>

        <EditText
            android:id="@+id/ed_expense_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rtv_expense_description"
            android:inputType="textShortMessage"
            android:lines="4"
            android:maxLines="4"
            android:selectAllOnFocus="false" />

        <!-- The expense amount -->
        <it.polito.mad.countonme.customviews.RequiredInputTextView
            android:id="@+id/rtv_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_amount"
            android:textSize="@dimen/interface_text_size_small"
            android:textColor="@android:color/black"
            CountOnMe:error_text="@string/lbl_invalid_value"
            CountOnMe:error_color="@color/errorColor"
            android:layout_below="@+id/ed_expense_description"
            android:layout_marginTop="@dimen/lbl_margin_10"/>

        <EditText
            android:id="@+id/ed_expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_below="@id/rtv_expense_amount"/>

        <!-- The currency spinner -->

        <it.polito.mad.countonme.customviews.RequiredInputTextView
            android:id="@+id/rtv_expense_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_currency"
            android:textColor="@android:color/black"
            android:textSize="@dimen/interface_text_size_small"
            CountOnMe:error_text="@string/lbl_required_field"
            CountOnMe:error_color="@color/errorColor"
            android:layout_below="@+id/ed_expense_amount"
            android:layout_marginTop="@dimen/lbl_margin_10"
            android:layout_marginBottom="@dimen/lbl_margin_5"/>

        <Spinner
            android:id="@+id/spin_expense_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/currencies_array"
            android:layout_below="@id/rtv_expense_currency"/>

        <!-- The paid by spinner -->


        <it.polito.mad.countonme.customviews.RequiredInputTextView
            android:id="@+id/rtv_expense_payer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_paid_by"
            android:textColor="@android:color/black"
            android:textSize="@dimen/interface_text_size_small"
            CountOnMe:error_text="@string/lbl_required_field"
            CountOnMe:error_color="@color/errorColor"
            android:layout_below="@id/spin_expense_currency"
            android:layout_marginTop="@dimen/lbl_margin_10"
            android:layout_marginBottom="@dimen/lbl_margin_5"/>

        <Spinner
            android:id="@+id/spin_expense_paidby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rtv_expense_payer"/>

        <it.polito.mad.countonme.customviews.RequiredInputTextView
            android:id="@+id/rtv_expense_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_date"
            android:textColor="@android:color/black"
            android:textSize="@dimen/interface_text_size_small"
            CountOnMe:error_text="@string/lbl_required_field"
            CountOnMe:error_color="@color/errorColor"
            android:layout_below="@id/spin_expense_paidby"
            android:layout_marginTop="@dimen/lbl_margin_10"
            android:layout_marginBottom="@dimen/lbl_margin_5"/>

        <TextView
            android:id="@+id/tv_expense_date"
            android:clickable="true"
            android:text="12/05/2017"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/interface_text_size"
            android:layout_below="@id/rtv_expense_date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lbl_margin_10"
            android:orientation="horizontal"
            android:layout_below="@id/tv_expense_date">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/interface_text_size_small"
                android:text="@string/lbl_money_transfer"
                android:layout_gravity="center_vertical"/>

            <Switch
                android:id="@+id/sw_money_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textOff="@string/lbl_no"
                android:textOn="@string/lbl_yes"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_users_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>


    </RelativeLayout>
    
</ScrollView>